Update day labels in tabs for the Bonn Teamevent schedule

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="tabs-section">
         <div class="container">
             <button class="tab-btn active" onclick="switchDay(1)">
-                Freitag, 13. Dezember
+                Samstag, 13. Dezember
             </button>
             <button class="tab-btn" onclick="switchDay(2)">
-                Samstag, 14. Dezember
+                Sonntag, 14. Dezember
             </button>
         </div>
     </div>
