--- a/index.html
+++ b/index.html
@@ -128,6 +128,22 @@
                 </div>
             </div>
             
+            <div class="station-card important">
+                <h3>Zug-Tickets</h3>
+                <div class="station-info">
+                    <p><strong>Hinfahrt:</strong> Freitag, 13.12. um 12:20</p>
+                    <a href="https://www.bahn.de/buchung/start?vbid=6d43c25c-c147-4437-9958-bd1a72aced0d" target="_blank" class="ticket-link">
+                        <span>Ticket Hinfahrt</span>
+                        <span class="arrow">→</span>
+                    </a>
+                    <p style="margin-top: 15px;"><strong>Rückfahrt:</strong> Samstag, 14.12. um 15:14</p>
+                    <a href="https://www.bahn.de/buchung/start?vbid=a0acf1c6-a486-4846-a94c-301bc07afd18" target="_blank" class="ticket-link">
+                        <span>Ticket Rückfahrt</span>
+                        <span class="arrow">→</span>
+                    </a>
+                </div>
+            </div>
+            
             <div class="station-card">
                 <h3>Nützliche Infos</h3>
                 <div class="station-info">
